plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'jacoco'
	id 'org.sonarqube' version '6.0.1.5171'
}

group = 'com.restaurant'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// ========================================
// SONARQUBE CONFIGURATION
// ========================================
sonar {
	properties {
		property "sonar.projectKey", "restaurant-chat-service"
		property "sonar.projectName", "Restaurant Chat Service"
		property "sonar.host.url", "http://localhost:9000"

		property "sonar.sources", "src/main/java"
		property "sonar.tests", "src/test/java"

		property "sonar.coverage.jacoco.xmlReportPaths",
				"${buildDir}/reports/jacoco/test/jacocoTestReport.xml"

		// Exclusions
		property "sonar.exclusions", """
            **/dto/**,
            **/model/**,
            **/entity/**,
            **/config/WebSocketConfig.java,
            **/config/RedisConfig.java,
            **/exception/**,
            **/constant/**,
            **/*Application.java,
            **/ChatServiceApplication.java
        """.trim().replaceAll(/\s+/, '')

		property "sonar.coverage.exclusions", """
            **/dto/**,
            **/model/**,
            **/entity/**,
            **/config/**,
            **/exception/**
        """.trim().replaceAll(/\s+/, '')

//		property "sonar.language", "java"
//		property "sonar.java.source", "21"
//		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.java.binaries", "${buildDir}/classes/java/main"
//		property "sonar.java.libraries", configurations.runtimeClasspath.files.join(',')
	}
}

// ========================================
// JACOCO CONFIGURATION
// ========================================
jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test

	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'**/dto/**',
					'**/model/**',
					'**/entity/**',
					'**/config/**',
					'**/exception/**',
					'**/*Application.class'
			])
		}))
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.50
			}
		}
	}
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

//check {
//	dependsOn jacocoTestCoverageVerification
//}

tasks.register('sonarAnalyze') {
	group = 'verification'
	description = 'Compile code and run SonarQube analysis (NO tests)'

	dependsOn 'classes', 'compileJava', 'compileTestJava'
	finalizedBy 'sonar'
}

ext {
	set('springCloudVersion', "2023.0.1")
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// For environment variable management
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// Database
	runtimeOnly 'mysql:mysql-connector-java:8.0.33'

	// Hugging Face Integration
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	// JCache support
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.hibernate:hibernate-jcache:6.4.4.Final'
	implementation 'javax.cache:cache-api:1.1.1'
	implementation 'io.lettuce:lettuce-core'

	// JCache provider ( Caffeine performance cache ):
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	implementation 'com.github.ben-manes.caffeine:jcache:3.1.8'

	//Prometheus metrics -> monitoring
	implementation 'io.micrometer:micrometer-registry-prometheus'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}